Ejercicios web recetas spring ingredientes funcionando correctamente

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -11,6 +11,21 @@
 	margin: 0 auto;
 }
 
+.tamImgReceta{
+	width: 150px;
+	height: 150px;
+	border-radius:50%;
+	margin-top:20px;
+}
+
+.texto{
+	margin-top:75px;	
+}
+
+.fondoblanco{
+	background-color:white;
+}
+
 textarea {
 	width: 100%;
 }
