--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -18,4 +18,11 @@ textarea {
 .img_icon{
 	width: 35px;
 	height: 35px;	
+	-ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+    transform: rotate(45deg);
+}
+
+tr:hover{
+	background: pink !important;
 }
