Ejercicio recetas finalizado correctamente

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -4,6 +4,16 @@
 	margin: 0 auto;
 }
 
+
+.tamImg2{
+	width: 250px;
+	height: 250px;
+	margin-left:20%;
+}
+
+
+
+
 .tamImg75{
 	width: 75px;
 	height: 75px;
