--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -31,14 +31,178 @@ tr:hover{
 	color: red;
 }
 
+.image-menu{
+	width: 100%;
+	height: 200px;
+	
+}
+
+.recetas{
+	position: relative;
+	padding: 10px;
+	background-color: white;
+}
+
+.titulo-receta{
+	position: absolute;
+	bottom: 5px;
+	margin: 0 auto;
+}
 
 
+/* CARD */
+.avatar{
+	position: relative;
+}
 
+.card {
+	padding-top: 20px;
+	margin: 10px 0 20px 0;
+	background-color: #ffffff;	
+	border-top-width: 0;
+	border-bottom-width: 2px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
 
+.card.hovercard {
+	position: relative;
+	width: 300px;
+	padding-top: 0;
+	overflow: hidden;
+	text-align: center;
+	background-color: #FFFFFF;
+	border: 1px solid #000000;
+}
 
+.card.hovercard img {
+	width: 300px;
+	height: 200px;
+}
 
+.card.hovercard .avatar {
+	position: relative;
+	top: -65px;
+	margin-bottom: -40px;
+}
 
+.card.hovercard .avatar .icono {
+	margin: 0 auto;
+	width: 80px;
+	height: 80px;
+	max-width: 80px;
+	max-height: 80px;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	background: rgba(0,0,0,0.6);
+	padding: 23.5px;
+	border: 1px solid #FFF;
+}
 
+.card.hovercard .avatar .icono i {
+	font-size: xx-large;
+	color: #CC0000;
+}
+
+.card.hovercard .avatar .icono i:hover {
+	font-size: xx-large;
+	color: #FF91AF;
+	cursor: pointer;
+}
+
+.card.hovercard .avatar .icono #likes {
+	position: absolute;
+	margin: -18px 0px;
+	font-weight: bold;
+	color: #FFFFFF;
+	font-size: 17px;
+}
+
+.card.hovercard .info {
+	padding: 4px 8px 10px;
+}
+
+.card.hovercard .info .title {
+	margin-bottom: 4px;
+	font-size: 24px;
+	line-height: 1;
+	color: #262626;
+	vertical-align: middle;
+}
+
+.card.hovercard .info .desc {
+	overflow: hidden;
+	font-size: 12px;
+	line-height: 20px;
+	color: #737373;
+	text-overflow: ellipsis;
+}
+
+.card.hovercard .bottom {
+	padding: 0 20px;
+	margin-bottom: 17px;
+}
+
+.card.people .card-bottom {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	display: inline-block;
+	width: 100%;
+	padding: 10px 20px;
+	line-height: 29px;
+	text-align: center;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+/* pulse */
+.pulse:hover:before {
+  content: '';
+  border-radius: 50px;
+  background: red;
+  width: 100px;
+  height: 100px;
+  opacity: 0;  
+  position: absolute;
+  top: 25%;
+  left: 40%;  
+  animation: pulse-animate 2s 0.5s infinite;
+  margin: -25px 0 0 -25px;
+}
+.pulse:hover:after {
+  content: '';
+  border-radius: 50px;
+  background: red;
+  width: 100px;
+  height: 100px;
+  opacity: 0; 
+  position: absolute;
+  top: 25%;
+  left: 40%;  
+  animation: pulse-animate 2s 1s infinite;
+  margin: -25px;
+}
+
+@keyframes pulse-animate {
+  0% {
+    opacity: 1;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(3);
+  }
+}
 
 
 
