autocomplete con llamada ajax

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -189,3 +189,12 @@ tr:hover {
     transform: scale(3);
   }
 }
+
+/* autocomplete modal 
+***************************************************************/
+
+.ui-autocomplete {
+	z-index: 1051 !important;
+}
+
+/* end: autocomplete modal */
