--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -191,7 +191,7 @@ tr:hover {
 
 
 /* autocomplete modal 
-***************************************************************/
+**************************************************************/
 
 .ui-autocomplete-input {
   border: none; 
@@ -205,6 +205,7 @@ tr:hover {
   z-index: 1511;
   position: relative;
 }
+
 .ui-menu .ui-menu-item a {
   font-size: 12px;
 }
