--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -198,3 +198,32 @@ tr:hover {
 
 }
 
+/* toast
+***************************************************************/
+#toast{
+		width: 50%;
+		min-height: 35px;
+		background-color: #000;
+		color: #FFF;
+		font-size: 1.3em;
+		opacity: 0.8;
+		text-align: center;
+		padding: 5px 20px;
+		margin: 0 auto;
+		border-radius: 15px;
+		position: fixed;
+		bottom: -150px;
+		/*
+		animation: show 2s;
+		animation-fill-mode: forwards;
+		*/
+		left: 28%;
+	}
+	@keyframes show{
+	0%{
+		bottom: -150px;
+	}
+	100%{
+		bottom: 50px;
+	}
+	}
