--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -4,6 +4,33 @@
 	margin: 0px 0px 25px 0px;
 }
 
+.centrar {
+	text-align: center;
+	position: relative;
+}
+
+.centrar:hover .adiosimagen {
+	display:block;
+	animation-name: aparece;
+    animation-duration: 0.5s;
+}
+
+.adiosimagen{
+	position: absolute;
+	top: 0;
+	right: 20px;
+	display: none;
+}
+
+@keyframes aparece {
+     0%   {opacity:0;}
+    20%  {opacity:0.2;}
+    40%  {opacity:0.4;}
+    60%  {opacity:0.6;}
+	80%  {opacity:0.8;}
+    100% {opacity:1;}
+}
+
 .row {
 	margin: 0 auto;
 }
