--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -15,6 +15,13 @@
 	margin: 0 auto;
 }
 
+.tamLiImg{
+	list-style: none;
+	max-width: 250px;
+	max-height: 250px;
+	
+}
+
 textarea {
 	width: 100%;
 }
