--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -245,4 +245,67 @@ tr:hover {
 #widget .widRight li {
 	margin-left: 15px;
 }
+
+/* Toast
+****************************************************/
+@keyframes show{
+		
+		0%{
+			bottom: -100px;
+		}
+		
+		100%{
+			bottom: 100px;
+		}
+		
+	}
+	
+	@keyframes restart{
+		
+		0%{
+			bottom: 100px;
+		}
+		
+		100%{
+			bottom: -100px;
+			display
+		}
+		
+	}
+	
+	#toast{
+		width: 30%;
+		min-height: 35px;
+		padding: 5px 20px;
+		background-color: #000;
+		color: #FFF;
+		font-size: 1.3em;
+		text-align: center;
+		opacity: 0.8;
+		margin: 0 auto;
+		border-radius: 15px;
+		position: fixed;
+		left: 28%;
+		bottom: -100px;
+		/*animation: show 2s;
+		animation-fill-mode: forwards;*/
+	}
+	
+	/***** Show view *****/
+	
+.img-all {
+	width: 100%;
+}	
+
+.img-cocinero {
+	border: 1px solid #000000;
+}
+
+#likeDetalle {
+	float: right;
+}
+
+.list_galeria_recetas {
+	list-style: none;
+}
 	
